crates/aonix/tests/data/invalid/duplicate_identifier.aoncir
[format]
format_version = "1.0.0"
encoding       = "utf-8"

[meta]
name           = "duplicate_identifier_should_be_rejected"
version        = "1.0.0"
parameters     = {}
level          = 1
status         = "experimental"

[[ports.inputs]]
name         = "data_input"
semantic_tag = "data_bit"
group        = ""

[[ports.outputs]]
name         = "data_output"
semantic_tag = "data_bit"
group        = ""

# "duplicated_signal" is declared twice as an internal signal. This
# isolates the cross-scope uniqueness rule enforced by CircuitBuilder,
# without colliding with any port name (so the document-level validator
# passes and the builder is the one that rejects).
[[signals]]
id = "duplicated_signal"
[[signals]]
id = "duplicated_signal"

[[gates]]
id     = "g_invert"
kind   = "NOT"
inputs = ["data_input"]
output = "duplicated_signal"

[[outputs]]
port   = "data_output"
source = "duplicated_signal"
